--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-multi-carousel": "^2.8.0",
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
     "eslint": "8.10.0",
